# cpp_glx

./: .gitignore  Readme.md
1. window/: build.sh  window.cpp
1_window/: CMakeLists.txt  window.cpp
2_disp_image/: CMakeLists.txt  disp_image.cpp  glad.c
